packages/shared-skills/skills/programming/fixtures/java/no-excuse/fail/optional-get/OptionalGetCase.java
package sample.bad;

import java.util.Optional;

class OptionalGetCase {
    private Optional<String> name;

    String name() {
        return name.get();
    }
}
